[bdist_wheel]
universal = 0

[metadata]
name = oscar_feed
description = OSCAR Feed
license = AGPLv3+
license_file = LICENSE
author = Thierry Degeling
author_email = t@io.lu
url = https://github.com/Kaweechelchen/oscar_feed

[options]
packages = find:
include_package_data = True
python_requires = >= 3.9
install_requires =
  beautifulsoup4 ~= 4.11
  colored ~= 1.4
  ics ~= 0.7
  python-dateutil ~= 2.8
  pytz ~= 2022.7
  pyyaml ~= 6.0
  requests ~= 2.28

[options.extras_require]
flake =
  flake8
  flake8-bandit
  flake8-comprehensions
  flake8-docstrings

[mypy]
show_error_context = True
show_column_numbers = True
ignore_missing_imports = True
disallow_incomplete_defs = True
disallow_untyped_defs = True
disallow_untyped_calls = False
warn_no_return = True
warn_redundant_casts = True
warn_unused_ignores = True
strict_optional = True
check_untyped_defs = False

[flake8]
max-line-length = 240
docstring-convention = google

ignore = E111,E114,E121,E123,E125,E126,S101,E131,E122,E501,E127,W503,W504

[options.entry_points]
console_scripts =
  oscar-feed = oscar_feed.crawler:main
